# pi-cowork

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DISTRIBUTION.md  MVP-ROADMAP.md  README.de.md  README.es.md  README.fr.md  README.hi.md  README.ja.md  README.ko.md  README.md  README.pt.md  README.ru.md  README.zh.md  SECURITY.md  biome.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml  security.yml
docs/: 2026-04-30-metaagents-upgrade-plan.md  telemetry-spec.md
docs/architecture/: metaagents-engine.md
docs/plans/: 2026-04-29-cowork-mvp-v1-design.md  2026-04-29-cowork-phase0-foundation.md  2026-05-01-phase-e-frontend-updates.md  2026-05-01-phase-f-polish-rebrand.md
metaagents/: Cargo.toml
metaagents/src/: config.rs  engine.rs  events.rs  extensions.rs  lib.rs  session.rs
metaagents/tests/: smoke.rs
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  telemetry.rs
src/chat/: ChatView.tsx
src/components/: ActivityBar.test.tsx  ActivityBar.tsx  BugReportDialog.tsx  ChatMessage.test.tsx  ChatMessage.tsx  ErrorBanner.tsx  HomeView.tsx  MessageInput.test.tsx  MessageInput.tsx  ModelSelector.test.tsx  ModelSelector.tsx  ProviderSetup.tsx  RightPanel.tsx  Sidebar.test.tsx  Sidebar.tsx  StatusBar.tsx  StreamingIndicator.tsx  TaskCard.tsx  TelemetryDialog.tsx  ThemeToggle.tsx  ThinkingBlock.tsx  ToolCallCard.tsx  ToolCallTimeline.tsx  WelcomeScreen.tsx
src/components/ui/: badge.tsx  button.tsx  scroll-area.tsx  segmented-control.tsx  separator.tsx  tooltip.test.tsx  tooltip.tsx
src/hooks/: useAuth.ts  useExtensions.ts  usePiStatus.ts  usePiStream.test.ts  usePiStream.ts  useProviders.ts  useSessions.test.ts  useSessions.ts
src/lib/: session-store.test.ts  session-store.ts  telemetry.ts  utils.test.ts
src/settings/: SettingsView.test.tsx  SettingsView.tsx
src/sidebar/: NavIcons.tsx  SessionItem.tsx  SessionList.tsx  Sidebar.test.tsx  Sidebar.tsx
src/styles/: theme.css
src/tasks/: TasksView.tsx
src/types/: index.ts  pi-events.ts
