# Cargo workspace root
#
# This workspace contains the metaagents engine and the Tauri shell that
# embeds it (currently named pi-cowork; will be rebranded to Zosma Cowork
# as part of Phase F of the upgrade plan in docs/2026-04-30-metaagents-upgrade-plan.md).

[workspace]
members = [
    "metaagents",
    "src-tauri",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.77.2"
license = "MIT"
repository = "https://github.com/zosmaai/pi-cowork"

[workspace.dependencies]
# Shared deps used by both crates. Pin versions here so all members agree.
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "io-util", "process"] }
log = "0.4"
thiserror = "1"
anyhow = "1"

[profile.dev]
# Faster incremental rebuilds during development.
opt-level = 0
debug = 1

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
