[package]
name = "metaagents"
version = "0.1.0"
description = "MetaAgents engine — a UI-agnostic agent harness built on pi_agent_rust"
authors = ["zosmaai"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "metaagents"
crate-type = ["rlib"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

# pi_agent_rust SDK is added in Phase B (next branch).
# Phase A only sets up the workspace skeleton.

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
