[package]
name = "pi-cowork"
version = "0.1.0"
description = "Desktop GUI for the pi coding agent (Zosma Cowork)"
authors = ["zosmaai"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
# Workspace-shared deps
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = ["process", "io-util", "sync", "rt-multi-thread"] }

# MetaAgents engine (Phase A: scaffolded but unused; wired up in Phase D)
metaagents = { path = "../metaagents" }

# Tauri
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-fs = "2"
