[package]
name = "metaagents-cowork"
version = "0.2.0"
description = "Zosma Cowork — desktop AI coworker powered by the metaagents engine"
authors = ["zosmaai"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
# Workspace-shared deps
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = ["process", "io-util", "sync", "rt-multi-thread"] }

# MetaAgents engine — in-process agent runtime
metaagents = { path = "../metaagents" }

# Tauri
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-fs = "2"

# Telemetry
reqwest = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
